--- a/assignments/day1/index.html
+++ b/assignments/day1/index.html
@@ -49,19 +49,19 @@
         </thead>
         <tbody>
             <tr>
-                <td>Chetan</td>
-                <td>23</td>
-                <td>chetan@gmail.com</td>
+                <td>Nabendu</td>
+                <td>39</td>
+                <td>nabendu@gmail.com</td>
             </tr>
             <tr>
-                <td>Madan</td>
-                <td>24</td>
-                <td>madan@gmail.com</td>
+                <td>Guru</td>
+                <td>39</td>
+                <td>guru@gmail.com</td>
             </tr>
             <tr>
-                <td>Karthik</td>
-                <td>30</td>
-                <td>karthik@gmail.com</td>
+                <td>Shikha</td>
+                <td>38</td>
+                <td>shikha@gmail.com</td>
             </tr>
         </tbody>
     </table>
@@ -115,6 +115,10 @@
         <input type="submit" value="Send">
     </form>
     <hr>
+    <!-- Button Tag -->
+    <button>Click here</button>
     <br>
+    <!-- Image Tag -->
+    <img src="images/unsplash.jpg" alt="Computer" width="300" height="200">
 </body>
 </html>
