--- a/agencysite/services.html
+++ b/agencysite/services.html
@@ -52,17 +52,17 @@
                     <form class="quote">
                         <div>
                             <label>Name</label><br>
-                            <input type="text" placeholder="Enter Name">
+                            <input type="text" placeholder="Enter Name" size="35">
                         </div>
                         <div>
                             <label>Email</label><br>
-                            <input type="email" placeholder="Enter email">
+                            <input type="email" placeholder="Enter email" size="35">
                         </div>
                         <div>
                             <label>Message</label><br>
-                            <textarea placeholder="Enter email"></textarea>
+                            <textarea placeholder="Enter message" rows="3" cols="30"></textarea>
                         </div>
-                        <button class="button" type="submit">Submit</button>
+                        <button class="button" type="submit" style="background-color: yellow;">Submit</button>
                     </form>
                 </div>
             </aside>
