--- a/ping-coming-soon-page/index.html
+++ b/ping-coming-soon-page/index.html
@@ -9,25 +9,56 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" />
 </head>
 <body>
-<main>
-  <img src="./images/logo.svg" alt="logo" class="logo" />
-  <h1>We are launching soon!</h1>
-  <h2>Subscribe and get notified</h2>
-  <form>
-    <input type="email" id="email" placeholder="Your email address..." />
-    <button>Notify Me</button>
-  </form>
-  <img src="./images/illustration-dashboard.png" alt="illustration" class="illustration" />
-  <footer>
-    <ul class="social-list">
-      <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-      <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-      <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-    </ul>
-    <p>
-      &copy; Copyright Ping. All rights reserved.
-    </p>
-  </footer>
-</main>
+  <main>
+    <img src="./images/logo.svg" alt="logo" class="logo" />
+    <h1>
+      We are launching
+      <strong>soon!</strong>
+    </h1>
+    <h2>Subscribe and get notified</h2>
+
+    <form id="form">
+      <div class="form-left">
+        <input
+          type="email"
+          name="email"
+          id="email"
+          placeholder="Your email address..."
+        />
+        <small>Error</small>
+      </div>
+      <button>Notify Me</button>
+    </form>
+
+    <img
+      src="./images/illustration-dashboard.png"
+      alt="illustration"
+      class="illustration"
+    />
+
+    <footer>
+      <ul class="social-list">
+        <li>
+          <a href="https://facebook.com/florinpop17">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://twitter.com/florinpop1705">
+            <i class="fab fa-twitter"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://instagram.com/florinpop17">
+            <i class="fab fa-instagram"></i>
+          </a>
+        </li>
+      </ul>
+      <p>
+        &copy; Copyright Ping. All rights reserved.
+      </p>
+    </footer>
+  </main>
+  <script src="main.js"></script>
 </body>
 </html>
